--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <p>{{ items[0].name }}: {{ items[0].price }} x {{ items[0].quantity }}</p>
         <p>小形: {{ totalPrice | numberWithDelimiter }}円</p>
         <p>合計（税込）: {{ totalPriceWithTax | numberWithDelimiter }}円</p>
+        <p v-show="!canBuy">
+            {{ 1000 | numberWithDelimiter }}以上からご購入いただけます
+        </p>
     </div>
     <script>
         console.assert(typeof Vue !== 'undefined');
