--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
 </head>
 <body>
     <div id="app">
-        <p>{{ items[0].name }}: {{ items[0].price }} x {{ items[0].quantity }}</p>
-        <p>小形: {{ totalPrice | numberWithDelimiter }}円</p>
-        <p>合計（税込）: {{ totalPriceWithTax | numberWithDelimiter }}円</p>
-        <p v-show="!canBuy">
-            {{ 1000 | numberWithDelimiter }}以上からご購入いただけます
-        </p>
+        <div v-bind:style="errorMessageStyle">
+            <ul>
+                <li v-for="item in items" v-bind:key="item.name">
+                    {{ item.name }}: {{ item.price }} x {{ item.quantity }} = {{ item.price * item.quantity | numberWithDelimiter }}円
+                </li>
+            </ul>
+            <p>{{ items[0].name }}: {{ items[0].price }} x {{ items[0].quantity }}</p>
+            <p>小形: {{ totalPrice | numberWithDelimiter }}円</p>
+            <p>合計（税込）: {{ totalPriceWithTax | numberWithDelimiter }}円</p>
+            <p v-show="!canBuy">
+                {{ 1000 | numberWithDelimiter }}以上からご購入いただけます
+            </p>
+        </div>
     </div>
     <script>
         console.assert(typeof Vue !== 'undefined');
