add doBuy method

--- a/index.html
+++ b/index.html
@@ -8,19 +8,26 @@
 </head>
 <body>
     <div id="app">
-        <div v-bind:style="errorMessageStyle">
             <ul>
                 <li v-for="item in items" v-bind:key="item.name">
-                    {{ item.name }}: {{ item.price }} x {{ item.quantity }} = {{ item.price * item.quantity | numberWithDelimiter }}円
+                    {{ item.name }}の個数: <input type="number" v-model.lazy="item.quantity" v-bind:value="item.quantity" min="0">
                 </li>
             </ul>
-            <p>{{ items[0].name }}: {{ items[0].price }} x {{ items[0].quantity }}</p>
-            <p>小形: {{ totalPrice | numberWithDelimiter }}円</p>
-            <p>合計（税込）: {{ totalPriceWithTax | numberWithDelimiter }}円</p>
-            <p v-show="!canBuy">
-                {{ 1000 | numberWithDelimiter }}以上からご購入いただけます
-            </p>
-        </div>
+            <hr>
+            <div v-bind:style="errorMessageStyle">
+                <ul>
+                    <li v-for="item in items" v-bind:key="item.name">
+                        {{ item.name }}: {{ item.price }} x {{ item.quantity }} = {{ item.price * item.quantity | numberWithDelimiter }}円
+                    </li>
+                </ul>
+                <p>{{ items[0].name }}: {{ items[0].price }} x {{ items[0].quantity }}</p>
+                <p>小形: {{ totalPrice | numberWithDelimiter }}円</p>
+                <p>合計（税込）: {{ totalPriceWithTax | numberWithDelimiter }}円</p>
+                <p v-show="!canBuy">
+                    {{ 1000 | numberWithDelimiter }}以上からご購入いただけます
+                </p>
+                <button v-bind:disabled="!canBuy" v-on:click="doBuy">購入</button>
+            </div>
     </div>
     <script>
         console.assert(typeof Vue !== 'undefined');
