--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="app">
             <ul>
                 <li v-for="item in items" v-bind:key="item.name">
-                    {{ item.name }}の個数: <input type="number" v-model.lazy="item.quantity" v-bind:value="item.quantity" min="0">
+                    {{ item.name }}の個数: <input type="number" v-model.lazy="item.quantity" min="0">
                 </li>
             </ul>
             <hr>
